# pos-and-brilink-application

./: .env.example  .gitignore  .npmrc  =8.5.10  CHANGELOG.md  ELECTRON.md  README.md  drizzle.config.json  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  tsconfig.electron.json  tsconfig.json  vitest.config.ts
.playwright-mcp/: page-2026-07-23T10-03-24-314Z.yml  page-2026-07-23T10-04-17-998Z.yml  page-2026-07-23T10-04-42-787Z.yml
docs/: catatagen-prd.md  catatagen-production-readiness.md  deployment.md  release.md  tauri-feature-parity.md  tauri-full-experiment.md  tauri-plugin-plan.md  tauri-release-checklist.md  user-guide.md
drizzle/: 0000_ambiguous_nekra.sql  migrations.js
e2e/: auth.spec.ts  brilink.spec.ts  global-setup.ts  (+10 more)
e2e-tauri/: account-operations.spec.ts  agent-debt.spec.ts  agent-transaction.spec.ts  audit-log.spec.ts  auth-negative.spec.ts  auth.spec.ts  backup-restore.spec.ts  backup.spec.ts  dashboard-nav.spec.ts  debt-management.spec.ts  finance.spec.ts  financial-ops.spec.ts  history.spec.ts  pos-checkout.spec.ts  product-advanced.spec.ts  product-pos.spec.ts  reports.spec.ts  session-role.spec.ts  settings.spec.ts  user-management.spec.ts  whatsapp-flow.spec.ts  whatsapp.spec.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  agent_services.rs  auth.rs  common.rs  debts.rs  lib.rs  main.rs  pos.rs  printer.rs  products.rs  seed.rs  session.rs  settings.rs  transactions.rs  whatsapp.rs
src-tauri/src/pos/: agent.rs  checkout.rs  dashboard.rs  lifecycle.rs  mod.rs  setup.rs  types.rs
(+222 files in other folders)
