[package]
name = "catatagen-local"
version = "0.1.0"
description = "CatatAgen Local - eksperimen Tauri full tanpa Next server"
authors = ["herdianrony"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "catatagen_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-sidecar"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
